--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,23 @@
     font-family: "latruffe";
     src: url("/public/images/VVDS_LaTruffe-Regular.ttf");
   }
+@layer components {
+    .card{
+        transform: translatey(0px);
+        animation: float 2s ease-in-out infinite;
+    }
+  @keyframes float {
+    0% {
+        /* box-shadow: 0 2px 5px 0px rgba(0,0,0,0.3); */
+        transform: translatey(0px);
+    }
+    50% {
+        /* box-shadow: 0 3px 5px 0px rgba(0,0,0,0.2); */
+        transform: translatey(-20px);
+    }
+    100% {
+        /* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.4); */
+        transform: translatey(0px);
+    }
+}
+}
